assets/css/shop.css
/* ... */
  
  /* Handle  */
  ::-webkit-scrollbar-thumb{
    border-radius: 4rem;
    cursor: pointer;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
  }

/

/*

===============

    Header

===============

*/
.nav-link {
    font-weight: var(--fw8);
    color: var(--light-text-color);
}
.nav-link:hover{
    color: var(--secondary-color);
}
.dropdown-item{
    font-size: var(--font-small);
    color: var(--light-text-color);
    padding: .5rem 1rem;
}

.bar1, .bar2, .bar3 {
    width: 3.5rem;
    height: .5rem;
    border-radius: .5rem;
    background-color: var(--light-text-color);
    margin: .6rem 0 0 .5rem;
    transition: 0.4s;
    cursor: pointer;
  }
  
  .change .bar1 {
    transform: translate(0, 11px) rotate(-45deg);
  }
  
  .change .bar2 {opacity: 0;}
  
  .change .bar3 {
    transform: translate(0, -11px) rotate(45deg);
  }

  /* .mobile-menu{
    padding-top: 10rem;
  } */

  .menu-hamburger {
    padding: 0rem 0rem ;
    height: 100vh;
    width: 50%;
    position: fixed;
    z-index: 999;
    top: 0;
    left: -51rem;
    background-color: var(--white-color);
    overflow-x: hidden;
  }
  .shape{
    width: 100%;
    height: 10rem;
    margin-bottom: 2rem;
    padding: 0 5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--secondary-dark-color);
    border-bottom-right-radius: 40rem;
  }
  .close {
	overflow: hidden;
	position: relative;
	border: none;
	padding: 0;
	width: 5rem; height: 5rem;
	border-radius: 50%;
	background: transparent;
	color: var(--border-color);
	cursor: pointer;
    }
	
	.close:hover {
		color: var(--primary-color)
	}
	
	.close:before, .close:after {
		position: absolute;
		top: 15%; left: 40% ;
		width: .25rem; height: 70%;
		border-radius: .125em;
		transform: rotate(45deg);
		background-color: currentColor;
		content: '';
	}
	
	.close:after { transform: rotate(-45deg); }

  .shape-logo{
    /* padding: 2rem 0 0 1rem; */
  }
  
.bi-apple-custom{
    margin-top: -.5rem;
}
.Adepa{
    text-align: center;
    padding: 1.5rem 0;
    margin: 1rem 0 2rem;
    border-radius: .5rem;
    background-color: var(--light-bg-color);
    color: var(--dark-color);
}

  .menu-hamburger a, .dropdown-btn {
    padding: .6rem .8rem 2.5rem 1.6rem;
    text-decoration: none;
    font-size: 1.6rem;
    display: block;
    border: none;
    background: none;
    width: 100%;
    text-align: left;
    cursor: pointer;
    outline: none;
    
  }
  
  .menu-hamburger a:hover, .dropdown-btn:hover {
    color: var(--secondary-color);
  }

  .dropdown-container {
    margin: -1.25rem 1rem 1rem ;
    border: 1px solid var(--light-text-color);
    border-radius: .5rem;
    padding-left: 8px;
  }
  .dropdown-container a {
    padding: 1rem;
  }
  
  /* Optional: Style the caret down icon */
  .fa-caret-down {
    float: right;
    padding-right: 8px;
  }
  
  /* Some media queries for responsiveness */
  @media screen and (max-height: 450px) {
    .menu-hamburger {padding-top: 15px;}
    .menu-hamburger a {font-size: 18px;}
  }

  /*

===============

    nav and tabs

===============

*/

.nav-tabs{
    display: none;
}

.logo{
    width: 15rem;
    height: 4rem;
    border-radius: .5rem;
}

.nav-tabs__link , .wItem{
    font-weight: var(--fw8);
    font-size: 1.6rem;
    color: var(--light-text-color);
    cursor: pointer;
}
.nav-tabs__link:hover , .wItem:hover {
    color: var(--secondary-color);
}
.nav-tabs__Sport-badge{
    font-size: 1rem;
    top: -1rem;
}
.like-number{
    padding: .35rem .6rem;
    top: .5rem !important;
    left: 3.35rem !important;
}

.nav-tabs__price{
    font-size: var(--font-small);
    width: 3rem;
    font-weight: var(--fw7);
}
.navs-tabs__woman{
    min-width: 8.5rem;
}

.nav-tabs-women-menu{
    display: none;
    top: 4rem;
    left: 0;
    right: 0;
    background-color: var(--light-bg-color);
    z-index: 999;
}

.nav-tabs-women-menu__link{
    font-weight: var(--fw6);
    font-size: 1.6rem;
    color: var(--dark-color);
}

.nav-tabs-women-menu__link--active{
    font-weight: var(--fw8);
    font-size: 1.8rem;
}
.nav-tabs-women-menu__most-wanted{
    background-image: url(../images/products/apparel4.jpg);
    background-size: cover;
    background-position: center;
    width: 20%;
}
.nav-tabs-women-menu__most-wanted-text{
    text-align: center;
    width: 5rem;
    font-weight: var(--fw8);
    margin-left: -6.5rem;
    font-size: 3rem;
    color: var(--secondary-dark-color);
}

/*

===============

    search box header

===============

*/
.search-box-header{
    display: none !important;
    background-color: var(--secondary-dark-color);
    height: 15vh;
}

.input-group{
    margin-bottom: 1rem;
    width: 40%;
    height: 6vh; 
}
.search-box__icon{
    z-index: 999;
    top: 35%;
    left: 4%;
}
.form-control{
    border-top-left-radius: .75rem !important;
    border-bottom-left-radius: .75rem !important;
    font-size: 1.1rem !important;
    font-weight: var(--fw8);
    font-family: "Poppins";
    padding-left: 5rem !important;
}

.form-control:focus{
    outline: none;
    border: none;
    box-shadow: none;
}

.form-btn{
    font-size: 1.8rem;
    width: 15rem;
    height: 5rem;
}
.search-box__btn{
    width: 20%;
    font-size: .8rem !important;
    font-weight: var(--fw8);
    border-top-right-radius: .75rem !important;
    border-bottom-right-radius: .75rem !important;
    background-color: var(--primary-color);
    color: var(--white-color);
}
.search-box__btn:hover{
    background-color: var(--secondary-color);
    color: var(--white-color);
}


/*

===============

    accordion-carousel-section

===============

*/

.list-group{
    /* margin-top: -15.7%; */
    margin-top: -22%;

}
.list-group-title{
    display: none;
    justify-content: space-between;
    color: var(--white-color);
    background-color: var(--primary-color);
    border-top-left-radius: .5rem;
    border-top-right-radius: .5rem;
    padding: 1rem 1.5rem .08rem;
}
/* ... */

